--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,15 @@
 {
   "presets": [
     ["env", { "modules": false }],
-    "stage-2"
+    "stage-2",
+    "es2015"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime","transform-vue-jsx",["component", [
+    {
+      "libraryName": "element-ui",
+      "styleLibraryName": "theme-default"
+    }
+  ]]],
   "comments": false,
   "env": {
     "test": {
